k8s-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: felix
  name: felix
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{}}, "ingress": true}'
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: felix
